# prompt2act

./: .gitignore  .gitmodules  BEHAVIOR_TREE_VISUALIZATION.md  DEBUG_MODE_FEATURE.md  Dockerfile  README.md  main.py  pyproject.toml  test_behavior_cleanup.py  test_blackboard_fix.py  test_tree_enhancements.py
YOLOv8_training/: YOLO_train.py  注意事項.txt
YOLOv8_training/dataSet/: README.roboflow.txt  data.yaml
camera_with_YOLO/: ArucoGenerator.py  app.py  findCamera.py
camera_with_YOLO/static/: style.css
docs/: 404.html  en.search-data.min.ac5b0cbc457a9cd49b904e39264b5270990ec85356beec682bc709d1eff1c060.json  en.search-data.min.ae7953092ca4455abafe31b7829cd768125bce87fe25aaea2a4ac772b2f102a4.json  en.search-data.min.ff80b9ea5391e05b69ae5663fd5e8b4672db5a03f71dfcb591edd1b1e98c98d2.json  en.search.min.249eb605d9b611757fa248ca57bdd8f232f9e5a5b03a6c61b05ba08acd6333f8.js  en.search.min.55c1c50d119742b73c98e988ab5a3b788310e863060ff8fbeb8fe8d65c7b1319.js  en.search.min.632fef31e55956331ad41c86bfdf9bf1eb90cf3736ea99710f0110dd209c28e7.js  hugo.toml  index.html  index.xml  manifest.json  sitemap.xml
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/public/: index.xml  (+2 more)
ros_kinetic/: Dockerfile
ros_noetic/: Dockerfile  PYTHON_VERSIONS.md  python_version_helper.py  ros_entrypoint.sh
ros_noetic/catkin_ws/src/niryo_web_interface/: CMakeLists.txt  package.xml
ros_noetic/catkin_ws/src/niryo_web_interface/launch/: main.launch  robot_control.launch  web_camera_node.launch  web_interface.launch  yolo_detection_node.launch
ros_noetic/catkin_ws/src/niryo_web_interface/scripts/: robot_control_node.py  web_camera_node.py  web_interface_node.py  web_interface_node.py(deprecated)  yolo_detection_node.py
ros_noetic/catkin_ws/src/niryo_web_interface/srv/: PickObject.srv
ros_noetic/catkin_ws/src/niryo_web_interface/static/: style.css
ros_noetic/catkin_ws/src/niryo_web_interface/static/css/: style.css
ros_noetic/catkin_ws/src/niryo_web_interface/static/js/: app.js
ros_noetic/catkin_ws/src/niryo_web_interface/templates/: index.html
site/: hugo.toml
(+242 files in other folders)
